--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   width: 30%;
   height: auto;
   font-size: 30px; 
+  background-color: lightgrey;
 }
 .notelist{
   display: block;
@@ -31,7 +32,13 @@
 .active{
   background-color: aqua;
 }
-.backbutton:hover{
+.backbutton:hover, .addButton:hover{
   color: red;
   cursor: pointer;
+}
+.addButton{
+  height: 100px;
+  width: 200px;
+  margin: 15px;
+
 }
